--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcc 'QH'
 - !lcsh 'Mammals -- North America'
 - !lcc 'QL'
+- GITenberg
 title: Comments on the Taxonomy and Geographic Distribution of Some North American
   Marsupials, Insectivores and Carnivores
 url: http://www.gutenberg.org/ebooks/33710
